fix: tiny tweak to chart company name spacing

--- a/src/components/StocksGrowth/styles.module.scss
+++ b/src/components/StocksGrowth/styles.module.scss
@@ -64,6 +64,7 @@
 .stocksGrowthCompany {
   display: flex;
   align-items: center;
+  margin-left: 20px;
 
   button {
     border: 0;
